fetching quiz complete and grading complete yet to fix quiz selector

--- a/registration.html
+++ b/registration.html
@@ -70,7 +70,7 @@
  	</div>
  	<div class="loginform">
  		<center>
- 		<label>Phone Number :</label><br>
+ 		<label>Email  :</label><br>
  		<input type="text" name="" placeholder="example@gmail.com" class="inputstyle" id="txtsiginemail"><br>
  		<label>password :</label><br>
  		<input type="password" name="" placeholder="password" class="inputstyle" id="siginppassword" ><br>
