fetching quiz complete and grading complete yet to fix quiz selector

--- a/accesedacc.html
+++ b/accesedacc.html
@@ -217,10 +217,10 @@
 	</div><br>
 	 <label>Select Course</label><br>
 	 <select class="inputstyle" id="coursetoenroll">
-	 	<option>Option 1</option>
-	 	<option>Option 2</option>
-	 	<option>Option 3</option>
-	 	<option>Option 4</option>
+	 	<option value="100">WEB DEVELOPMENT</option>
+	 	<option value="200">JAVA</option>
+	 	<option value="300">PYTHON</option>
+	 	<option value="400">ANDROID</option>
 	 </select><br>
 	  <label>Select Level</label><br>
 	 <select class="inputstyle" id="skilllevel">
@@ -265,6 +265,7 @@
  	<div style="background: brown">4</div>
  </div> -->
  <script src="https://www.gstatic.com/firebasejs/8.2.5/firebase-app.js"></script>
+ <script src="https://www.gstatic.com/firebasejs/7.16.0/firebase-database.js"></script>
 <script src="https://www.gstatic.com/firebasejs/8.2.5/firebase-auth.js"></script>
 <script type="text/javascript" src="scripts/frconelearning.js"></script>
  <script type="text/javascript" src="scripts/account.js"></script>
