fetching quiz complete and grading complete yet to fix quiz selector

--- a/accesedacc.html
+++ b/accesedacc.html
@@ -48,9 +48,23 @@
 				Just started <br>
 				<span>Level :</span> <br>
 			<span id="quizno">1</span> <br><br>
-			<button id="openquizup" onclick="openquizpage()">open Quiz</button> 
+			<button id="openquiz" onclick="openquizpage()">open Quiz</button> 
 			</p>
 		 </div><br> 
+		 <div class="enrolled-activity">
+		 	<div class="activitydisplay">
+				<center>
+					<label id="courseid2">200</label>
+				</center>
+			</div><br>
+			 <label>Score : 0.0</label>
+			<p>
+				Just started <br>
+				<span>Level :</span> <br>
+			<span id="quizno">1</span> <br><br>
+			<button id="openquiz" onclick="openquizpage2()">open Quiz</button> 
+			</p>
+		 </div>
 		
 	</div>
 	<div  class="enrolled-activity addactivity">
