fetching quiz complete and grading complete yet to fix quiz selector

--- a/quizapp.html
+++ b/quizapp.html
@@ -32,7 +32,7 @@
 	 <div class="quizinput">
 	 	<div class="quizinputtitle">
 	 		<center><label>Answer questions</label></center>
-	 		<label>Time : (minutes) <span>30 : 00</span></label><br>
+	 		<label>Time : (minutes) <span id="quiztime"></span></label><br>
 	 		<label>Question : <span id="quizno"></span><span>/</span><span>30</span></label>
 	 		<label style="float: right;">Score : <span id="scoredmarks">0</span></label>
 	 	</div><br>
