fetching quiz complete and grading complete yet to fix quiz selector

--- a/accesedacc.html
+++ b/accesedacc.html
@@ -37,7 +37,7 @@
 	</div>
 	<div class="enrolled">
 		 
-		<div class="enrolled-activity">
+		<div class="enrolled-activity div100">
 		 	<div class="activitydisplay">
 				<center>
 					<label id="courseid">100</label>
@@ -46,12 +46,12 @@
 			 <label>Score : 0.0</label>
 			<p>
 				Just started <br>
-				<span>Level :</span> <br>
+				<span>Level :</span>
 			<span id="quizno">1</span> <br><br>
-			<button id="openquiz" onclick="openquizpage()">open Quiz</button> 
+			<button id="openquiz" onclick="openquizpage1()">Open Quiz</button> 
 			</p>
 		 </div><br> 
-		 <div class="enrolled-activity">
+		 <div class="enrolled-activity div200">
 		 	<div class="activitydisplay">
 				<center>
 					<label id="courseid2">200</label>
@@ -60,9 +60,39 @@
 			 <label>Score : 0.0</label>
 			<p>
 				Just started <br>
-				<span>Level :</span> <br>
-			<span id="quizno">1</span> <br><br>
-			<button id="openquiz" onclick="openquizpage2()">open Quiz</button> 
+				<span>Level :</span>
+			<span id="quizno">null</span> <br><br>
+			<button id="openquiz" onclick="openquizpage2()">Open Quiz</button> 
+			</p>
+		 </div>
+		 <br> 
+		 <div class="enrolled-activity div300">
+		 	<div class="activitydisplay">
+				<center>
+					<label id="courseid2">300</label>
+				</center>
+			</div><br>
+			 <label>Score : 0.0</label>
+			<p>
+				Just started <br>
+				<span>Level :</span>
+			<span id="quizno">null</span> <br><br>
+			<button id="openquiz" onclick="openquizpage3()">Open Quiz</button> 
+			</p>
+		 </div>
+		 <br> 
+		 <div class="enrolled-activity div400">
+		 	<div class="activitydisplay">
+				<center>
+					<label id="courseid2">400</label>
+				</center>
+			</div><br>
+			 <label>Score : 0.0</label>
+			<p>
+				Just started <br>
+				<span>Level :</span>
+			<span id="quizno">null</span> <br><br>
+			<button id="openquiz" onclick="openquizpage4()">Open Quiz</button> 
 			</p>
 		 </div>
 		
@@ -91,8 +121,6 @@
 		 	<li class="weekend-activitiy2">Activity 2</li>
 		 	<li class="weekend-activitiy1">Activity 3</li>
 		 </ol>
-
-		  <button id="openquiz">open Quiz</button>
 		 </center>
 	</div>
 </div><br>
