disabled already selected courses

--- a/accesedacc.html
+++ b/accesedacc.html
@@ -41,13 +41,14 @@
 		 	<div class="activitydisplay">
 				<center>
 					<label id="courseid">100</label>
+					<span>WEB DEVELOPMENT</span>
 				</center>
 			</div><br>
 			 <label>Score : 0.0</label>
 			<p>
 				Just started <br>
 				<span>Level :</span>
-			<span id="quizno">1</span> <br><br>
+			<span id="100level"></span> <br><br>
 			<button id="openquiz" onclick="openquizpage1()">Open Quiz</button> 
 			</p>
 		 </div><br> 
@@ -55,13 +56,14 @@
 		 	<div class="activitydisplay">
 				<center>
 					<label id="courseid2">200</label>
+					<span>JAVA</span>
 				</center>
 			</div><br>
 			 <label>Score : 0.0</label>
 			<p>
 				Just started <br>
 				<span>Level :</span>
-			<span id="quizno">null</span> <br><br>
+			<span id="200level"></span> <br><br>
 			<button id="openquiz" onclick="openquizpage2()">Open Quiz</button> 
 			</p>
 		 </div>
@@ -70,13 +72,14 @@
 		 	<div class="activitydisplay">
 				<center>
 					<label id="courseid2">300</label>
+					<span>PYTHON</span>
 				</center>
 			</div><br>
 			 <label>Score : 0.0</label>
 			<p>
 				Just started <br>
 				<span>Level :</span>
-			<span id="quizno">null</span> <br><br>
+			<span id="300level"></span> <br><br>
 			<button id="openquiz" onclick="openquizpage3()">Open Quiz</button> 
 			</p>
 		 </div>
@@ -85,13 +88,14 @@
 		 	<div class="activitydisplay">
 				<center>
 					<label id="courseid2">400</label>
+					<span>ANDROID</span>
 				</center>
 			</div><br>
 			 <label>Score : 0.0</label>
 			<p>
 				Just started <br>
 				<span>Level :</span>
-			<span id="quizno">null</span> <br><br>
+			<span id="400level"></span> <br><br>
 			<button id="openquiz" onclick="openquizpage4()">Open Quiz</button> 
 			</p>
 		 </div>
@@ -259,6 +263,7 @@
 	</div><br>
 	 <label>Select Course</label><br>
 	 <select class="inputstyle" id="coursetoenroll">
+	 	<option></option>
 	 	<option value="100">WEB DEVELOPMENT</option>
 	 	<option value="200">JAVA</option>
 	 	<option value="300">PYTHON</option>
