--- a/registration.html
+++ b/registration.html
@@ -105,7 +105,10 @@
 		</center><br>
 	</div>
 </div>
+<script type="text/javascript">
+	
 
+</script>
 
 
 <script src="https://www.gstatic.com/firebasejs/8.2.5/firebase-app.js"></script>
