unfixed course selected

--- a/accesedacc.html
+++ b/accesedacc.html
@@ -44,11 +44,11 @@
 					<span>WEB DEVELOPMENT</span>
 				</center>
 			</div><br>
-			 <label>Score : 0.0</label>
+			 <label>Score :<span id="webscore" class="strongtest">0.0</span></label>
 			<p>
 				Just started <br>
 				<span>Level :</span>
-			<span id="100level"></span> <br><br>
+			<span id="weblevel" class="strongtest"></span> <br><br>
 			<button id="openquiz" onclick="openquizpage1()">Open Quiz</button> 
 			</p>
 		 </div><br> 
@@ -59,11 +59,11 @@
 					<span>JAVA</span>
 				</center>
 			</div><br>
-			 <label>Score : 0.0</label>
+			 <label>Score : <span id="javascore" class="strongtest">0.0</span></label>
 			<p>
 				Just started <br>
 				<span>Level :</span>
-			<span id="200level"></span> <br><br>
+			<span id="javalevel" class="strongtest"></span> <br><br>
 			<button id="openquiz" onclick="openquizpage2()">Open Quiz</button> 
 			</p>
 		 </div>
@@ -75,11 +75,11 @@
 					<span>PYTHON</span>
 				</center>
 			</div><br>
-			 <label>Score : 0.0</label>
+			 <label>Score :<span id="pythonscore" class="strongtest">0.0</span></label>
 			<p>
 				Just started <br>
 				<span>Level :</span>
-			<span id="300level"></span> <br><br>
+			<span id="pythonlevel" class="strongtest"></span> <br><br>
 			<button id="openquiz" onclick="openquizpage3()">Open Quiz</button> 
 			</p>
 		 </div>
@@ -91,11 +91,11 @@
 					<span>ANDROID</span>
 				</center>
 			</div><br>
-			 <label>Score : 0.0</label>
+			 <label>Score : <span id="androidscore" class="strongtest">0.0</span></label>
 			<p>
 				Just started <br>
 				<span>Level :</span>
-			<span id="400level"></span> <br><br>
+			<span id="androidlevel" class="strongtest"></span> <br><br>
 			<button id="openquiz" onclick="openquizpage4()">Open Quiz</button> 
 			</p>
 		 </div>
