custom alert add but not yet complete  there timeout error

--- a/registration.html
+++ b/registration.html
@@ -52,10 +52,10 @@
  		<input type="text" name="" placeholder="example@gmail.com" class="inputstyle" id="signupemail"><br>
  		<label>Area of Intrest</label><br>
  		<select class="inputstyle" id="cmbspecialization">
- 			<option>option 1</option>
- 			<option>option 2</option>
- 			<option>option 3</option>
- 			<option>option 4</option>
+ 			<option>Android</option>
+ 			<option>Java </option>
+ 			<option>Pyhton</option>
+ 			<option>Web development</option>
  		</select><br>
  		<label>Phone Number :</label><br>
  		<input type="text" name="" placeholder="0712345678" class="inputstyle" id="txtphone"><br>
@@ -81,6 +81,16 @@
  	</div>
  </div>
 <br>
+ <div class="customalertframe" id="myalert">
+ 	<h1 id="alertsubject"></h1>
+ 	<div class="alertframemessage">
+ 		<p id="alertmessage">
+ 		
+ 		</p>
+ 	</div>
+ </div>
+<br>
+
 <div class="footer">
 	<div class="rightfooter">
 		<center>
