--- a/index.html
+++ b/index.html
@@ -224,6 +224,20 @@ style="background-image: linear-gradient(rgba(0,0,0,0.5), rgba(0,0,0,0.5)), url(
 		</p>
 	</div>
 </div><br>
+<button id="btnerror">error</button>
+<button id="btnsuccess">success</button>
+<button id="btninfor">infor</button>
+
+ <div class="customalertframe" id="myalert">
+ 	<h1 id="alertsubject"></h1>
+ 	<div class="alertframemessage">
+ 		<p id="alertmessage">
+ 		
+ 		</p>
+ 	</div>
+ </div>
+
+
 <div class="footer">
 	<div class="rightfooter">
 		<center>
@@ -256,5 +270,6 @@ style="background-image: linear-gradient(rgba(0,0,0,0.5), rgba(0,0,0,0.5)), url(
  	<div style="background: #FD4935;">3</div>
  	<div style="background: brown">4</div>
  </div> -->
+ <script type="text/javascript" src="scripts/index.js"></script>
 </body>
 </html>
