score issues complete and working fine need update for quiz two

--- a/accesedacc.html
+++ b/accesedacc.html
@@ -44,7 +44,7 @@
 					<span>WEB DEVELOPMENT</span>
 				</center>
 			</div><br>
-			 <label>Score :<span id="webscore" class="strongtest">0.0</span></label>
+			 <label>Score :<span id="webscore" class="strongtest">0.0</span><span>%</span></label>
 			<p>
 				Just started <br>
 				<span>Level :</span>
@@ -59,7 +59,7 @@
 					<span>JAVA</span>
 				</center>
 			</div><br>
-			 <label>Score : <span id="javascore" class="strongtest">0.0</span></label>
+			 <label>Score : <span id="javascore" class="strongtest">0.0</span><span>%</span></label>
 			<p>
 				Just started <br>
 				<span>Level :</span>
@@ -75,7 +75,7 @@
 					<span>PYTHON</span>
 				</center>
 			</div><br>
-			 <label>Score :<span id="pythonscore" class="strongtest">0.0</span></label>
+			 <label>Score :<span id="pythonscore" class="strongtest">0.0</span><span>%</span></label>
 			<p>
 				Just started <br>
 				<span>Level :</span>
@@ -91,7 +91,7 @@
 					<span>ANDROID</span>
 				</center>
 			</div><br>
-			 <label>Score : <span id="androidscore" class="strongtest">0.0</span></label>
+			 <label>Score : <span id="androidscore" class="strongtest">0.0</span><span>%</span></label>
 			<p>
 				Just started <br>
 				<span>Level :</span>
