--- a/results.html
+++ b/results.html
@@ -20,8 +20,8 @@
 			<br>
 				<nav>
 		<a href="#"  class="active"><span><i class="fa fa-user iconz"></i></span> &nbsp;Results</a>
-		<a href="accesedacc.html"><span><i class="fa fa-home iconz"></i></span> &nbsp;My Account</a>
-		<a href="accesedacc.html#schedule-section"><span><i class="fa fa-calendar iconz"></i></span> &nbsp;My Schedule</a>
+		<a href="accesedacc.html"><span><i class="fa fa-home iconz"></i></span> &nbsp;Dashboard</a>
+		<a href="accesedacc.html#schedule-section"><span><i class="fa fa-calendar iconz"></i></span> &nbsp;Schedule</a>
 			
 		<span class="profileicon" id="fdsa"> <span id="logedinusername">usrename &nbsp;&nbsp;</span><i class="fa fa-user  fa-3x"></i></span>
 	</nav>
