--- a/results.html
+++ b/results.html
@@ -52,27 +52,14 @@
 		<table>
 			<thead>
 				<tr>
+					<th>CODE</th>
 					<th>ACTIVITY </th>
 					<th>LEVEL </th>
 					<th>SCORE </th>
 				</tr>
 			</thead>
-			<tbody>
-				<tr>
-					<td>activity  1</td>
-					<td>expert  1</td>
-					<td>95</td>
-				</tr>
-				<tr>
-					<td>activity  1</td>
-					<td>expert  1</td>
-					<td>95</td>
-				</tr>
-				<tr>
-					<td>activity  1</td>
-					<td>expert  1</td>
-					<td>95</td>
-				</tr>
+			<tbody id="resultstablebody">
+				
 			</tbody>
 		</table>
 	</div></center>
