onlines pages added to view online users

--- a/onlines.html
+++ b/onlines.html
@@ -39,24 +39,22 @@
 		</center>
 	</div><br>
 	<center>
-	<a href="accesedacc.html">Home</a><br><br><br>
+	<a href="#">Onlines</a><br><br><br>
+	<a href="accesedacc.html">Home</a><br><br><br>	
 	<a href="#">Profile</a><br><br><br>
-	<a href="onlines.html">Onlines</a><br><br><br>
 	<a href="#" id="btnlogout">Logout</a><br><br><br>
 	</center>
 </div>
-<br>
-
+<center><h2 style="color: green">Onlines</h2></center>
 <div class="resultsholder">
 	<center>
 	<div class="cardresults">
 		<table>
 			<thead>
 				<tr>
-					<th>CODE</th>
-					<th>ACTIVITY </th>
-					<th>LEVEL </th>
-					<th>SCORE </th>
+					<th>USER NAME</th>
+					<th>INTREST </th>
+					<th>STATUS </th>
 				</tr>
 			</thead>
 			<tbody id="resultstablebody">
@@ -102,6 +100,6 @@
  <script src="https://www.gstatic.com/firebasejs/8.2.5/firebase-app.js"></script>
 <script src="https://www.gstatic.com/firebasejs/8.2.5/firebase-auth.js"></script>
 <script type="text/javascript" src="scripts/frconelearning.js"></script>
- <script type="text/javascript" src="scripts/results.js"></script>
+ <script type="text/javascript" src="scripts/onlines.js"></script>
 </body>
 </html>
