--- a/accesedacc.html
+++ b/accesedacc.html
@@ -249,8 +249,9 @@
 		</center>
 	</div><br>
 	<center>
+	<a href="#">Home</a><br><br><br>
 	<a href="#">Profile</a><br><br><br>
-	<a href="#">&nbsp;&nbsp;Help&nbsp;&nbsp;</a><br><br><br>
+	<a href="onlines.html">Onlines</a><br><br><br>
 	<a href="#" id="btnlogout">Logout</a><br><br><br>
 	</center>
 </div><br>
