--- a/accesedacc.html
+++ b/accesedacc.html
@@ -34,7 +34,8 @@
 <div class="enrolled-holder">
 	<div class="enrolled-title">
 		<center><label>Your Enrolls </label></center>
-		<marquee><h3>There is no quiz available  at the moment !!!</h3></marquee>
+		<marquee><h3>There is no learning materials at the moment !!!</h3></marquee>
+		<marquee><h3>quiz available</h3></marquee>
 	</div>
 	<div class="enrolled">
 		 
