--- a/accesedacc.html
+++ b/accesedacc.html
@@ -105,7 +105,7 @@
 	<div  class="enrolled-activity addactivity">
 		 	<div class="activitydisplay">
 				<center>
-					<span style="color: dodgerblue">Add activity</span>
+					<span style="color: dodgerblue">Enroll now</span>
 					
 				</center>
 			</div><br>
