reset password design fixed

--- a/registration.html
+++ b/registration.html
@@ -76,6 +76,7 @@
  		<input type="password" name="" placeholder="password" class="inputstyle" id="siginppassword" ><br>
  		<input type="checkbox" name="" id="showpassword2">  Show Password<br>
  		<button class="submitbutton" id="btnsubmitlogin">Logn in</button><br>
+ 		<button class="submitbutton forgotpass" id="btnforgotpassword">Forgot password ?</button><br>
  		</center>
  	</div>
  	</div>
