Profile page modification

--- a/profile.html
+++ b/profile.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Registration form</title>
+	<title>Usre profile</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta charset="utf-8">
 	<link rel="stylesheet" type="text/css" href="styles/banner.css">
@@ -32,24 +32,45 @@
  
 <div class="maindisplay">
 	<div class="profileavator"> 
+
+		<center>
+			 <h3>Profile photo</h3>
 	<img src="images/potrait.png">
 	<div>
 		<br><br>
 		<button id="btnaddimage"><span><i class="fa fa-plus  fa-3x"></i> Add image</span></button>
 	</div>
+	</center>
 	</div>
 	<div class="profiledetails">
-		<label>Full Name : </label><span>Daniel Kipchirchir</span>
+		 <h3>Your Details</h3>
+		 <div class="detail-holder">
+		 	<label>Full Name : </label><br>
+		 	<span>Daniel Kipchirchir</span>
 		<br>
-		<label>Phone : </label><span>0789564123</span>
-		<br>
-		<label>Active Email : </label><span>Kirwa@gmail.com</span>
-		<br>
-		<label>Intrest : </label><span>Web</span>
-		<br>
-		<label>Enrolls : </label><span>Web , android</span>
-		<br>
-		<label>Status : </label><span>active</span>
+		 </div>
+		  <div class="detail-holder">
+		 	<label>Phone : </label><br>
+		 	<span>0789564123</span>
+		 	<br>
+		 </div>
+		   <div class="detail-holder">
+		 	<label>Active Email : </label><br>
+		 	<span>email@gmail.com</span>
+		 	<br>
+		 </div>
+		 <div class="detail-holder">
+		 	<label>Intrest : </label><br>
+		 	<span>Web</span><br>
+		 </div>
+		 <div class="detail-holder">
+		 	<label>Enrolls : </label><br>
+		 	<span>Web</span><br>
+		 </div>
+		 <div class="detail-holder">
+		 	<label>Status : </label><br>
+		 	<span>Active</span><br>
+		 </div>
 		<br>
 	
 	</div>
