Profile page modification

--- a/onlines.html
+++ b/onlines.html
@@ -41,7 +41,7 @@
 	<center>
 	<a href="#">Onlines</a><br><br><br>
 	<a href="accesedacc.html">Home</a><br><br><br>	
-	<a href="#">Profile</a><br><br><br>
+	<a href="profile.html">Profile</a><br><br><br>
 	<a href="#" id="btnlogout">Logout</a><br><br><br>
 	</center>
 </div>
