--- a/accesedacc.html
+++ b/accesedacc.html
@@ -250,7 +250,7 @@
 	</div><br>
 	<center>
 	<a href="#">Home</a><br><br><br>
-	<a href="#">Profile</a><br><br><br>
+	<a href="profile.html">Profile</a><br><br><br>
 	<a href="onlines.html">Onlines</a><br><br><br>
 	<a href="#" id="btnlogout">Logout</a><br><br><br>
 	</center>
