Profile page modification

--- a/profile.html
+++ b/profile.html
@@ -63,30 +63,30 @@
 		 <h3>Your Details</h3>
 		 <div class="detail-holder">
 		 	<label>Full Name : </label><br>
-		 	<span>Daniel Kipchirchir</span>
+		 	<span id="fullname"></span>
 		<br>
 		 </div>
 		  <div class="detail-holder">
 		 	<label>Phone : </label><br>
-		 	<span>0789564123</span>
+		 	<span id="Phonenumber"></span>
 		 	<br>
 		 </div>
 		   <div class="detail-holder">
 		 	<label>Active Email : </label><br>
-		 	<span>email@gmail.com</span>
+		 	<span id="useremail"></span>
 		 	<br>
 		 </div>
 		 <div class="detail-holder">
 		 	<label>Intrest : </label><br>
-		 	<span>Web</span><br>
+		 	<span id="intrest"></span><br>
 		 </div>
 		 <div class="detail-holder">
 		 	<label>Enrolls : </label><br>
-		 	<span>Web</span><br>
+		 	<span id="Enrolls"></span><br>
 		 </div>
 		 <div class="detail-holder">
 		 	<label>Status : </label><br>
-		 	<span>Active</span><br>
+		 	<span id="status"></span><br>
 		 </div>
 		<br>
 	
