--- a/profile.html
+++ b/profile.html
@@ -126,6 +126,7 @@
  	<div style="background: #FD4935;">3</div>
  	<div style="background: brown">4</div>
  </div> -->
+ <script type="text/javascript" src="scripts/profileupdate.js"></script>
  <script src="https://www.gstatic.com/firebasejs/8.2.5/firebase-app.js"></script>
 <script src="https://www.gstatic.com/firebasejs/8.2.5/firebase-auth.js"></script>
 <script type="text/javascript" src="scripts/frconelearning.js"></script>
