title bar modification

--- a/adminquizcontrol.html
+++ b/adminquizcontrol.html
@@ -11,7 +11,8 @@
 <body>
 <div class="bannerholder">
 	<div class="logoholder"> 
-		logo here<br><br><br>
+		<img src="images/logo.png" height="100px">
+		<label class="logoname">e-learning</label>
 	</div>
 	<center>
 		<div class="navbar">
