--- a/results.html
+++ b/results.html
@@ -40,7 +40,7 @@
 	</div><br>
 	<center>
 	<a href="accesedacc.html">Home</a><br><br><br>
-	<a href="#">Profile</a><br><br><br>
+	<a href="profile.html">Profile</a><br><br><br>
 	<a href="onlines.html">Onlines</a><br><br><br>
 	<a href="#" id="btnlogout">Logout</a><br><br><br>
 	</center>
