--- a/quizapp.html
+++ b/quizapp.html
@@ -13,7 +13,8 @@
 <body>
 <div class="bannerholder">
 	<div class="logoholder"> 
-		logo here<br><br><br>
+		<h3>Online learning</h3>
+
 	</div>
 	<center>
 		 
