--- a/index.html
+++ b/index.html
@@ -11,8 +11,7 @@
 <body>
 <div class="bannerholder">
 	<div class="logoholder"> 
-		<img src="images/logo.png" height="100px">
-		<label class="logoname">e-learning</label>
+		<h3>Online learning</h3>
 	</div>
 	<center>
 		<div class="navbar">
