title bar modification

--- a/results.html
+++ b/results.html
@@ -13,7 +13,7 @@
 <body>
 <div class="bannerholder">
 	<div class="logoholder"> 
-		<h3>Online learning</h3>
+		<label>Online learning</label>
 	</div>
 	<center>
 		<div class="navbar">
