title bar modification

--- a/adminquizcontrol.html
+++ b/adminquizcontrol.html
@@ -11,7 +11,7 @@
 <body>
 <div class="bannerholder">
 	<div class="logoholder"> 
-		<h3>Online learning</h3>
+		Online learning<br><br><br>
 	</div>
 	<center>
 		<div class="navbar">
