--- a/profile.html
+++ b/profile.html
@@ -14,7 +14,7 @@
 <body>
 <div class="bannerholder">
 	<div class="logoholder"> 
-		<label>Online learning</label>
+		Online learning<br><br><br>
 	</div>
 	<center>
 		<div class="navbar">
