--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
 <div class="bannerholder">
 	<div class="logoholder"> 
-		<label>Online learning</label>
+		Online learning<br><br><br>
 	</div>
 	<center>
 		<div class="navbar">
