--- a/onlines.html
+++ b/onlines.html
@@ -13,7 +13,7 @@
 <body>
 <div class="bannerholder">
 	<div class="logoholder"> 
-	<label>Online learning</label>
+	Online learning<br><br><br>
 	</div>
 	<center>
 		<div class="navbar">
