--- a/profile.html
+++ b/profile.html
@@ -14,7 +14,7 @@
 <body>
 <div class="bannerholder">
 	<div class="logoholder"> 
-		Online learning<br><br><br>
+		<br><br><br>Online learning
 	</div>
 	<center>
 		<div class="navbar">
