title bar modification

--- a/registration.html
+++ b/registration.html
@@ -11,7 +11,7 @@
 <body>
 <div class="bannerholder">
 	<div class="logoholder"> 
-		Online learning<br><br><br>
+		<br><br><br>Online learning
 	</div>
 	<center>
 		<div class="navbar">
@@ -54,7 +54,7 @@
  		<select class="inputstyle" id="cmbspecialization">
  			<option>Android</option>
  			<option>Java </option>
- 			<option>Pyhton</option>
+ 			<option>Python</option>
  			<option>Web development</option>
  		</select><br>
  		<label>Phone Number :</label><br>
