--- a/adminquizcontrol.html
+++ b/adminquizcontrol.html
@@ -11,7 +11,7 @@
 <body>
 <div class="bannerholder">
 	<div class="logoholder"> 
-		Online learning<br><br><br>
+		<br><br><br>Online learning
 	</div>
 	<center>
 		<div class="navbar">
