--- a/results.html
+++ b/results.html
@@ -13,7 +13,7 @@
 <body>
 <div class="bannerholder">
 	<div class="logoholder"> 
-		Online learning<br><br><br>
+		<br><br><br>Online learning
 	</div>
 	<center>
 		<div class="navbar">
