reader page design

--- a/readerpage.html
+++ b/readerpage.html
@@ -43,7 +43,8 @@
 	 </div>
 	 <div id="notesholder">
 	 	<br>
-	 	
+	 	<h3 class="unit-title"></h3>
+	 	<h2 class="unit-topic"></h2>
 	 </div>
 	 <div >
 	 	<br>
