reader page design

--- a/readerpage.html
+++ b/readerpage.html
@@ -45,6 +45,9 @@
 	 	<br>
 	 	<h3 class="unit-title"></h3>
 	 	<h2 class="unit-topic"></h2>
+	 	<p class="unit-content">
+	 		
+	 	</p>
 	 </div>
 	 <div >
 	 	<br>
