reader page design and intergration

--- a/accesedacc.html
+++ b/accesedacc.html
@@ -49,6 +49,7 @@
 				Just started <br>
 				<span>Level :</span>
 			<span id="weblevel" class="strongtest"></span> <br><br>
+			<button id="openquiz" onclick="opencourseContent()">Open Course</button><br><br>
 			<button id="openquiz" onclick="openquizpage1()">Open Quiz</button> 
 			</p>
 		 </div><br> 
@@ -64,6 +65,7 @@
 				Just started <br>
 				<span>Level :</span>
 			<span id="javalevel" class="strongtest"></span> <br><br>
+			<button id="openquiz" onclick="opencourseContent()">Open Course</button><br><br>
 			<button id="openquiz" onclick="openquizpage2()">Open Quiz</button> 
 			</p>
 		 </div>
@@ -80,6 +82,7 @@
 				Just started <br>
 				<span>Level :</span>
 			<span id="pythonlevel" class="strongtest"></span> <br><br>
+			<button id="openquiz" onclick="opencourseContent()">Open Course</button><br><br>
 			<button id="openquiz" onclick="openquizpage3()">Open Quiz</button> 
 			</p>
 		 </div>
@@ -96,6 +99,7 @@
 				Just started <br>
 				<span>Level :</span>
 			<span id="androidlevel" class="strongtest"></span> <br><br>
+			<button id="openquiz" onclick="opencourseContent()">Open Course</button><br><br>
 			<button id="openquiz" onclick="openquizpage4()">Open Quiz</button> 
 			</p>
 		 </div>
