--- a/accesedacc.html
+++ b/accesedacc.html
@@ -35,7 +35,7 @@
 		<center><label>Your Enrolls </label></center>
 		
 	</div>
-	<div class="enrolled">
+	<div class="enrolled" onclick="buttonidfetch()">
 		 
 		<div class="enrolled-activity div100">
 		 	<div class="activitydisplay">
@@ -49,7 +49,7 @@
 				Just started <br>
 				<span>Level :</span>
 			<span id="weblevel" class="strongtest"></span> <br><br>
-			<button id="openquiz" onclick="opencourseContent()">Open Course</button><br><br>
+			<button id="openquiz" value="100">Open Course</button><br><br>
 			<button id="openquiz" onclick="openquizpage1()">Open Quiz</button> 
 			</p>
 		 </div><br> 
@@ -65,7 +65,7 @@
 				Just started <br>
 				<span>Level :</span>
 			<span id="javalevel" class="strongtest"></span> <br><br>
-			<button id="openquiz" onclick="opencourseContent()">Open Course</button><br><br>
+			<button id="openquiz" value="200">Open Course</button><br><br>
 			<button id="openquiz" onclick="openquizpage2()">Open Quiz</button> 
 			</p>
 		 </div>
@@ -82,7 +82,7 @@
 				Just started <br>
 				<span>Level :</span>
 			<span id="pythonlevel" class="strongtest"></span> <br><br>
-			<button id="openquiz" onclick="opencourseContent()">Open Course</button><br><br>
+			<button id="openquiz" value="300">Open Course</button><br><br>
 			<button id="openquiz" onclick="openquizpage3()">Open Quiz</button> 
 			</p>
 		 </div>
@@ -99,7 +99,7 @@
 				Just started <br>
 				<span>Level :</span>
 			<span id="androidlevel" class="strongtest"></span> <br><br>
-			<button id="openquiz" onclick="opencourseContent()">Open Course</button><br><br>
+			<button id="openquiz"  value="400">Open Course</button><br><br>
 			<button id="openquiz" onclick="openquizpage4()">Open Quiz</button> 
 			</p>
 		 </div>
