reader page design and intergration and student data display

--- a/accesedacc.html
+++ b/accesedacc.html
@@ -49,8 +49,7 @@
 				Just started <br>
 				<span>Level :</span>
 			<span id="weblevel" class="strongtest"></span> <br><br>
-			<button id="openquiz" value="100">Open Course</button><br><br>
-			<button id="openquiz" onclick="openquizpage1()">Open Quiz</button> 
+			<button id="openquiz" value="100">Open Course</button>
 			</p>
 		 </div><br> 
 		 <div class="enrolled-activity div200">
@@ -65,8 +64,7 @@
 				Just started <br>
 				<span>Level :</span>
 			<span id="javalevel" class="strongtest"></span> <br><br>
-			<button id="openquiz" value="200">Open Course</button><br><br>
-			<button id="openquiz" onclick="openquizpage2()">Open Quiz</button> 
+			<button id="openquiz" value="200">Open Course</button> 
 			</p>
 		 </div>
 		 <br> 
@@ -82,8 +80,8 @@
 				Just started <br>
 				<span>Level :</span>
 			<span id="pythonlevel" class="strongtest"></span> <br><br>
-			<button id="openquiz" value="300">Open Course</button><br><br>
-			<button id="openquiz" onclick="openquizpage3()">Open Quiz</button> 
+			<button id="openquiz" value="300">Open Course</button>
+			
 			</p>
 		 </div>
 		 <br> 
@@ -99,8 +97,7 @@
 				Just started <br>
 				<span>Level :</span>
 			<span id="androidlevel" class="strongtest"></span> <br><br>
-			<button id="openquiz"  value="400">Open Course</button><br><br>
-			<button id="openquiz" onclick="openquizpage4()">Open Quiz</button> 
+			<button id="openquiz"  value="400">Open Course</button> 
 			</p>
 		 </div>
 		
