--- a/readerpage.html
+++ b/readerpage.html
@@ -48,6 +48,7 @@
 	 	<p class="unit-content">
 	 		
 	 	</p>
+	 	<button id="openquiz" onclick="openquizpage()">Open Quiz</button>
 	 </div>
 	 <div >
 	 	<br>
