--- a/profile.html
+++ b/profile.html
@@ -48,50 +48,64 @@
 </div>
 
 <div class="maindisplay">
-	<div class="profileavator"> 
+	 <div class="profileavator">
+	 	 <center><h3>Profile photo</h3></center>
+	 	<center>
+	 	<div class="image-holder">
+	 		<center>
+       
+  <img src="images/background.jpg">
+  <div>
+    <br><br>
+    <button id="btnaddimage"><span><i class="fa fa-plus  fa-3x"></i> Add image</span></button>
+    <br><br>
+  </div>
+  </center>
+	 	</div>
+	 	</center>
+	 
+	 </div>
 
-		<center>
-			 <h3>Profile photo</h3>
-	<img src="images/potrait.png">
-	<div>
-		<br><br>
-		<button id="btnaddimage"><span><i class="fa fa-plus  fa-3x"></i> Add image</span></button>
-	</div>
-	</center>
-	</div>
-	<div class="profiledetails">
-		 <h3>Your Details</h3>
-		 <div class="detail-holder">
-		 	<label>Full Name : </label><br>
-		 	<span id="fullname"></span>
-		<br>
-		 </div>
-		  <div class="detail-holder">
-		 	<label>Phone : </label><br>
-		 	<span id="Phonenumber"></span>
-		 	<br>
-		 </div>
-		   <div class="detail-holder">
-		 	<label>Active Email : </label><br>
-		 	<span id="useremail"></span>
-		 	<br>
-		 </div>
-		 <div class="detail-holder">
-		 	<label>Intrest : </label><br>
-		 	<span id="intrest"></span><br>
-		 </div>
-		 <div class="detail-holder">
-		 	<label>Enrolls : </label><br>
-		 	<span id="Enrolls"></span><br>
-		 </div>
-		 <div class="detail-holder">
-		 	<label>Status : </label><br>
-		 	<span id="status"></span><br>
-		 </div>
-		<br>
-	
-	</div>
-</div>
+	 
+
+ <div class="profiledetails">
+ 	<center>
+ 		 <h3>Your Details</h3>
+     <div class="detail-holder">
+      <label>Full Name : </label><br>
+      <span id="fullname"></span>
+    <br>
+     </div>
+      <div class="detail-holder">
+      <label>Phone : </label><br>
+      <span id="Phonenumber"></span>
+      <br>
+     </div>
+       <div class="detail-holder">
+      <label>Active Email : </label><br>
+      <span id="useremail"></span>
+      <br>
+     </div>
+     <div class="detail-holder">
+      <label>Intrest : </label><br>
+      <span id="intrest"></span><br>
+     </div>
+     <div class="detail-holder">
+      <label>Enrolls : </label><br>
+      <span id="Enrolls"></span><br>
+     </div>
+     <div class="detail-holder">
+      <label>Status : </label><br>
+      <span id="status"></span><br>
+     </div>
+    <br>
+ 	</center>
+ </div>
+
+</div> 
+
+
+
 
 <br>
 <div class="footer">
