profile page redesign

--- a/profile.html
+++ b/profile.html
@@ -54,7 +54,7 @@
 	 	<div class="image-holder">
 	 		<center>
        
-  <img src="images/background.jpg">
+  <img src="images/potrait.png">
   <div>
     <br><br>
     <button id="btnaddimage"><span><i class="fa fa-plus  fa-3x"></i> Add image</span></button>
