profile page redesign

--- a/profile.html
+++ b/profile.html
@@ -41,7 +41,7 @@
 	</div><br>
 	<center>
 		<a href="#">Profile</a><br><br><br>
-	<a href="online.html">Onlines</a><br><br><br>
+	<a href="onlines.html">Onlines</a><br><br><br>
 	<a href="accesedacc.html">Home</a><br><br><br>	
 	<a href="#" id="btnlogout">Logout</a><br><br><br>
 	</center>
@@ -69,8 +69,14 @@
 	 
 
  <div class="profiledetails">
- 	<center>
- 		 <h3>Your Details</h3>
+ 	<div class="profile-enrolls">
+ 		 <center>
+ 		 	<h2>Your Enrolls</h2>
+ 		 </center>
+ 	</div>
+ 	<div class="profile-data">
+ 			<center>
+ 		 <h2>Your Details</h2>
      <div class="detail-holder">
       <label>Full Name : </label><br>
       <span id="fullname"></span>
@@ -100,6 +106,8 @@
      </div>
     <br>
  	</center>
+ 	</div>
+ 
  </div>
 
 </div> 
