--- a/profile.html
+++ b/profile.html
@@ -49,7 +49,7 @@
 
 <div class="maindisplay">
 	 <div class="profileavator">
-	 	 <center><h3>Profile photo</h3></center>
+	 	 <center><h3>Profile Photo</h3></center>
 	 	<center>
 	 	<div class="image-holder">
 	 		<center>
