--- a/adminquizcontrol.html
+++ b/adminquizcontrol.html
@@ -200,7 +200,7 @@
 					<th>DAY</th>
 					<th>TIME </th>
 					<th>EVENT </th>
-					<th>VENU </th>
+					<th>VENUE </th>
 					<th>STATUS </th>
 					<th>ACTION </th>
 				</tr>
