--- a/accesedacc.html
+++ b/accesedacc.html
@@ -33,10 +33,12 @@
 <div class="enrolled-holder">
 	<div class="enrolled-title">
 		<center><label>Your Enrolls </label></center>
-		
+		 
 	</div>
 	<div class="enrolled" onclick="buttonidfetch()">
-		 
+         <div class="loader"></div>
+     
+
 		<div class="enrolled-activity div100">
 		 	<div class="activitydisplay">
 				<center>
