admin navigation control modification

--- a/adminquizcontrol.html
+++ b/adminquizcontrol.html
@@ -31,6 +31,25 @@
 		<a href="#" id="callschedule"><span><i class="fa fa-calendar iconz"></i></span> &nbsp;Schedule</a>
 			
 			</span>
+			<span class="user-nav">
+				<a href="#" id="calladduser"><span><i class="fa fa-user iconz"></i></span> &nbsp;Add User</a>
+		<a href="#" id="callmanageuser"><span><i class="fa fa-home iconz"></i></span> &nbsp;Manage User</a>
+		<a href="#" id="calluserreport"><span><i class="fa fa-calendar iconz"></i></span> &nbsp;User Report</a>
+			
+			</span>
+
+			<span class="unit-nav">
+				<a href="#" id="calladduser"><span><i class="fa fa-user iconz"></i></span> &nbsp;Add Unit</a>
+		<a href="#" id="callmanageuser"><span><i class="fa fa-home iconz"></i></span> &nbsp;Manage Unit</a>
+		<a href="#" id="calluserreport"><span><i class="fa fa-calendar iconz"></i></span> &nbsp;Unit Report</a>
+			
+			</span>
+			<span class="content-nav">
+				<a href="#" id="calladduser"><span><i class="fa fa-user iconz"></i></span> &nbsp;Add Content</a>
+		<a href="#" id="callmanageuser"><span><i class="fa fa-home iconz"></i></span> &nbsp;Manage Content</a>
+		<a href="#" id="calluserreport"><span><i class="fa fa-calendar iconz"></i></span> &nbsp;#####</a>
+			
+			</span>
 		
 	</nav>
 		</div>
