Design of admin dashbaord

--- a/adminquizcontrol.html
+++ b/adminquizcontrol.html
@@ -8,7 +8,7 @@
 	<link rel="stylesheet" type="text/css" href="styles/adminquizcontrol.css">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
-<body>
+<body style="background: #f1f1f1;">
 <div class="bannerholder">
 	<div class="logoholder"> 
 		<br><br><br>Online learning
@@ -237,6 +237,94 @@
         </div>
        
 
+ </section>
+ <section class="main-dashboard">
+ 	<div class="main-totalusers"> 
+ 		
+ 		<table>
+ 			<tr>
+ 				<td>
+ 					<img src="images/userspotrait.png" width="75px">
+ 				</td>
+ 				<td>
+ 					<label class="largeText dodgerblueText">TOTAL USERS : <span>null</span></label>
+ 				</td>
+ 			</tr>
+ 		</table>
+ 	</div>
+ 	<div class="enrolls-holder">
+ 		<div class="enroll-card">
+ 			
+ 		<table>
+ 			<tr>
+ 				<td>
+ 					<img src="images/userspotrait.png" width="75px">
+ 				</td>
+ 				<td>
+ 					<label class="smallText dodgerblueText">WEB enrolls : <span>null</span></label>
+ 				</td>
+ 			</tr>
+ 		</table>
+ 		</div>
+ 		<div class="enroll-card">
+ 			<table>
+ 			<tr>
+ 				<td>
+ 					<img src="images/userspotrait.png" width="75px">
+ 				</td>
+ 				<td>
+ 					<label class="smallText dodgerblueText">JAVA enrolls : <span>null</span></label>
+ 				</td>
+ 			</tr>
+ 		</table>
+ 		</div>
+ 		<div class="enroll-card">
+ 			<table>
+ 			<tr>
+ 				<td>
+ 					<img src="images/userspotrait.png" width="75px">
+ 				</td>
+ 				<td>
+ 					<label class="smallText dodgerblueText">PYTHON enrolls : <span>null</span></label>
+ 				</td>
+ 			</tr>
+ 		</table>
+ 		</div>
+ 	</div>
+ 	<div class="scroll-table">
+ 	<div class="table-holder">
+ 		<div class="table-caption">
+ 			<label class="largeText brownText">Unenrolled students : <span>null</span></label>
+ 		</div>
+ 		<table>
+ 			<thead>
+ 				<tr>
+ 					<th>Student Name</th>
+ 					<th>Enroll Date</th>
+ 					<th>Intrest</th>
+ 					<th>Student Email</th>
+ 					<th>Action</th>
+ 				</tr>
+ 			</thead>
+ 			<tbody>
+ 				<tr>
+ 					<td>Student Name</td>
+ 					<td>Enroll Date</td>
+ 					<td>Intrest</td>
+ 					<td>Student Email</td>
+ 					<td>Action</td>
+ 				</tr>
+ 				<tr>
+ 					<td>Student Name</td>
+ 					<td>Enroll Date</td>
+ 					<td>Intrest</td>
+ 					<td>Student Email</td>
+ 					<td>Action</td>
+ 				</tr>
+ 			</tbody>
+ 		</table>
+ 	</div>
+ 	</div>
  </section>
 
 <div class="footer">
